---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: ????
  Changes:
    - All recipe ingredients and products will always be shown despite object visibility settings
    - Renamed "machine" back to "crafter" as the reason for the name change is moot at this point
  Bugfixes:
    - Fixed a crash when opening a quick reference panel for a hidden recipe, when show hidden objects is turned off
    - Fixed a crash when a mod would removed while translations were running, but before those translations translated all of that mod's strings
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2020-07-27
  Features:
    - Enabling "use internal names" will change search to use internal names as well
  Changes:
    - Renamed "show internal names" to "use internal names" and moved to search settings
  Bugfixes:
    - Fixed a desync related to player.connnected being unreliable during on_configuration_changed in multiplayer
    - Fixed a potential crash if a GUI handler was removed between versions
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2020-07-25
  Bugfixes:
    - Fixed that the search history would not be purged on configuration change, leading to crashes with non-existent items
    - Reverted the session history "fix" from v2.0.2 that was actually being caused by the above issue, and didn't actually fix anything
    - Fixed a crash with the listbox item clicked regex when an item name has brackets in it
    - Fixed a crash when attempting to get a machine blueprint for a crafter that had the "non-blueprintable" flag set
    - Fixed that temporary machine blueprints of machines with a side that was an even number of tiles would be placed one tile off from where the preview was