@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.5
 Date: ????
+  Features:
+    - Added character to "made in" list for recipes that are hand-craftable
   Changes:
     - All recipe ingredients and products will always be shown despite object visibility settings
     - Renamed "machine" back to "crafter" as the reason for the name change is moot at this point
